styles: ajuste na estrutura da pag filmes

--- a/src/pages/filmes.html
+++ b/src/pages/filmes.html
@@ -27,8 +27,8 @@
         <div class="maxWidth">
             <section class="container-animes">
                 <article class="container-animes-bg" id="nw18">
-                    <h1>Animes</h1>
-                    <p>O Naped pode ser sua fonte de informações sobre o mundo nerd e outros assuntos relacionados.</p>
+                    <h1 class="h1-search">Animes</h1>
+                    <p class="p-search">O Naped pode ser sua fonte de informações sobre o mundo nerd e outros assuntos relacionados.</p>
                 </article>
                 <article class="search">
                     <input type="search" name="search" id="search" placeholder="Quer ajuda na procura? Pesquise aqui"> <img src="/src/assets/images/search.svg" alt="">
@@ -39,7 +39,7 @@
                         <div class="recent-news-box-info">
                             <div class="new-box box-left-scroll" id="nw19">
                                 <div class="p-news">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
+                                    <p class="p-news-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
                                         malesuada et velit in, blandit molestie dolor.</p>
                                 </div>
                             </div>
@@ -47,7 +47,7 @@
                         <div class="recent-news-box-info">
                             <div class="new-box box-left-scroll" id="nw19">
                                 <div class="p-news">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
+                                    <p class="p-news-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
                                         malesuada et velit in, blandit molestie dolor.</p>
                                 </div>
                             </div>
@@ -55,7 +55,7 @@
                         <div class="recent-news-box-info">
                             <div class="new-box box-left-scroll" id="nw19">
                                 <div class="p-news">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
+                                    <p class="p-news-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
                                         malesuada et velit in, blandit molestie dolor.</p>
                                 </div>
                             </div>
@@ -63,7 +63,7 @@
                         <div class="recent-news-box-info">
                             <div class="new-box box-left-scroll" id="nw19">
                                 <div class="p-news">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
+                                    <p class="p-news-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
                                         malesuada et velit in, blandit molestie dolor.</p>
                                 </div>
                             </div>
@@ -71,7 +71,7 @@
                         <div class="recent-news-box-info">
                             <div class="new-box box-left-scroll" id="nw19">
                                 <div class="p-news">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
+                                    <p class="p-news-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
                                         malesuada et velit in, blandit molestie dolor.</p>
                                 </div>
                             </div>
@@ -79,7 +79,7 @@
                         <div class="recent-news-box-info">
                             <div class="new-box box-left-scroll" id="nw19">
                                 <div class="p-news">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
+                                    <p class="p-news-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
                                         malesuada et velit in, blandit molestie dolor.</p>
                                 </div>
                             </div>
@@ -87,7 +87,7 @@
                         <div class="recent-news-box-info">
                             <div class="new-box box-left-scroll" id="nw19">
                                 <div class="p-news">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
+                                    <p class="p-news-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
                                         malesuada et velit in, blandit molestie dolor.</p>
                                 </div>
                             </div>
@@ -95,7 +95,7 @@
                         <div class="recent-news-box-info">
                             <div class="new-box box-left-scroll" id="nw19">
                                 <div class="p-news">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
+                                    <p class="p-news-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
                                         malesuada et velit in, blandit molestie dolor.</p>
                                 </div>
                             </div>
@@ -103,7 +103,7 @@
                         <div class="recent-news-box-info">
                             <div class="new-box box-left-scroll" id="nw19">
                                 <div class="p-news">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
+                                    <p class="p-news-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus,
                                         malesuada et velit in, blandit molestie dolor.</p>
                                 </div>
                             </div>
@@ -116,7 +116,7 @@
     <footer>
         <div class="maxWidth" id="main-footer">
             <div id="logo">Naped</div>
-            <p>Todas as imagens de filmes, séries e etc são marcas registradas dos seus respectivos proprietários.</p>
+            <p class="p-footer">Todas as imagens de filmes, séries e etc são marcas registradas dos seus respectivos proprietários.</p>
         </div>
 
     </footer>
