style: teste de ajuste do box-text- search

--- a/src/pages/filmes.html
+++ b/src/pages/filmes.html
@@ -25,10 +25,12 @@
     </header>
     <main>
         <div class="maxWidth">
-            <section class="container-animes">
-                <article class="container-animes-bg" id="nw18">
+            <section class="container-search">
+                <article class="container-search-bg" id="nw18">
+                   <div class="container-search-bg-text">
                     <h1 class="h1-search">Animes</h1>
                     <p class="p-search">O Naped pode ser sua fonte de informações sobre o mundo nerd e outros assuntos relacionados.</p>
+                   </div>
                 </article>
                 <article class="search">
                     <input type="search" name="search" id="search" placeholder="Quer ajuda na procura? Pesquise aqui"> <img src="/src/assets/images/search.svg" alt="">
